<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Screen Recorder" />



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginStart="15dp"
            android:text="@string/media"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:text="@string/output_folder"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:paddingBottom="10dp"
        android:layout_height="wrap_content"
        android:text="@string/output_folder_output_folder"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="0dp"
        android:background="@color/pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginStart="15dp"
            android:text="@string/control_panel"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_horizontal_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:text="@string/horizontal_position"/>
    <TextView
        android:id="@+id/id_text_result_media"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:paddingBottom="10dp"
        android:layout_height="wrap_content"
        android:text="@string/right"/>
    </LinearLayout>



    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="0dp"
        android:background="@color/pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/id_vertical_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:text="@string/vertical_position"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:paddingBottom="10dp"
        android:layout_height="wrap_content"
        android:text="@string/top"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="0dp"
        android:background="@color/pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginStart="15dp"
            android:text="@string/recorder"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_video_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:text="@string/video_size"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:paddingBottom="10dp"
        android:layout_height="wrap_content"
        android:text="@string/_720p"/>

    </LinearLayout>



    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="0dp"
        android:background="@color/pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true">

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="20dp"
            tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="bottom"
            android:text="@string/on" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/audio_recording"
            />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/pink"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <LinearLayout
        android:id="@+id/id_stop_with"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:text="@string/stop_with"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:paddingBottom="10dp"
        android:layout_height="wrap_content"
        android:text="@string/notification_tap_power_button_device_shake"/>

    </LinearLayout>


</LinearLayout>
